# LightningLabsServer

./: Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2024-06-22-010348_create_entities/: down.sql  up.sql
migrations/2024-06-22-025220_create_logins/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
