[package]
name = "ll-new-server"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1", features = ["postgres", "serde_json", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenvy = "0.15.7"
either = "1.12.0"
okapi = "0.7.0"
pbkdf2 = "0.12.2"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
schemars = { version = "0.8.21", features = ["uuid1"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha3 = "0.10.8"
uuid = { version = "1.8.0", features = ["serde", "v7"] }
